btrfs-progs (4.5.3-0.1) UNRELEASED; urgency=medium

  * Non-maintainer upload.
  * New upstream release.
  * Update standards version to 3.9.8 (no changes needed).
  * Install upstream changelog

 -- Nicholas D Steeves <nsteeves@gmail.com>  Sat, 28 May 2016 16:27:44 -0400

btrfs-progs (4.5.2-1) unstable; urgency=medium

  [ Dimitri John Ledkov ]
  * Thanks for NMU of package rename.
  * New upstream release 4.5.2.
  * Upload using dgit.
  * Source-only upload.
  * btrfs-convert should not be included in the initramfs, but should be
    compiled. Using btrfs-convert is not a trivial operation, and
    especially not from a minimal shell. Also it is known to fail, and for
    a sophisticated user it is trivial to include it in the
    initramfs. Thus won't fix Closes: #801192
  * No sponsorship required Closes: #823474
  * Add Provides btrfs-tools-udeb to the -progs-udeb package.
  * Enable verbose build.

  [ Ben Hutchings ]
  * Show only errors from boot-time "btrfs scan" if "quiet" is
    used. Closes: #812722

 -- Dimitri John Ledkov <xnox@debian.org>  Tue, 10 May 2016 09:59:51 +0100

btrfs-progs (4.4.1-1.1) unstable; urgency=medium

  * Non-maintainer upload.
  * New upstream release.
  * Rename package to btrfs-progs (Closes: #780081)
  * Update standards version to 3.9.7 (no changes needed).
  * debian/control: Add "Breaks" per Gianfranco Costamagna's suggestion
  * Change lintian override to reflect package rename
  * Switch from using postinst and postrm to using triggers
    per Christian Seiler's recommendation.

 -- Nicholas D Steeves <nsteeves@gmail.com>  Fri, 22 Apr 2016 19:41:30 -0400

btrfs-tools (4.4-1) unstable; urgency=medium

  * New upstream release.

 -- Dimitri John Ledkov <xnox@ubuntu.com>  Tue, 19 Jan 2016 19:03:41 +0000

btrfs-tools (4.3-1) unstable; urgency=medium

  * New upstream release.

 -- Dimitri John Ledkov <dimitri.j.ledkov@linux.intel.com>  Sat, 07 Nov 2015 11:27:13 +0000

btrfs-tools (4.2.2-1) unstable; urgency=medium
